fix text align

--- a/lesson17/clw2/styles.css
+++ b/lesson17/clw2/styles.css
@@ -7,6 +7,7 @@
   overflow: scroll;
   border-collapse: collapse;
   border: 1px solid black;
+  text-align: right;
 }
 
 .title {
